BisUtils.Generated/BisUtils.Generated.EnScript/Parser/Generated/EnScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/ryannkelly/Desktop/BisUtils/BisUtils.Generated/BisUtils.Generated.EnScript/EnScriptParser.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace BisUtils.Generated.EnScript;
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class EnScriptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_LINE_COMMENT=1, EMPTY_DELIMITED_COMMENT=2, DELIMITED_COMMENT=3, 
		WHITESPACES=4, CLASS=5, ENUM=6, SWITCH=7, EXTENDS=8, CONST=9, BREAK=10, 
		CASE=11, ELSE=12, FOR=13, CONTINUE=14, FOREACH=15, IF=16, NEW=17, RETURN=18, 
		THIS=19, THREAD=20, VOID=21, WHILE=22, AUTOPTR=23, AUTO=24, REF=25, NULL=26, 
		NOTNULL=27, NATIVE=28, VOLATILE=29, PROTO=30, STATIC=31, OWNED=32, REFERENCE=33, 
		OUT=34, PROTECTED=35, EVENT=36, TYPEDEF=37, MODDED=38, OVERRIDE=39, SEALED=40, 
		INOUT=41, SUPER=42, POINTER=43, GOTO=44, PRIVATE=45, EXTERNAL=46, DELETE=47, 
		LOCAL=48, DEFAULT=49, Increment=50, Decrement=51, LShift_Assign=52, RShift_Assign=53, 
		Subtract_Assign=54, Add_Assign=55, Multiply_Assign=56, Divide_Assign=57, 
		Or_Assign=58, Xor_Assign=59, LessEqual=60, GreaterEqual=61, And_Assign=62, 
		Inequal=63, Equal=64, LogicalOr=65, LogicalAnd=66, BitwiseOr=67, BitwiseXor=68, 
		BitwiseAnd=69, BitwiseNot=70, Greater=71, Less=72, Assign=73, Subtract=74, 
		Add=75, Multiply=76, Divide=77, LParenthesis=78, RParenthesis=79, LCurly=80, 
		RCurly=81, Comma=82, Colon=83, Semicolon=84, LSBracket=85, RSBracket=86, 
		Dot=87, Bang=88, DoubleQuote=89, SingleQuote=90, Modulo=91, IDENTIFIER=92, 
		PREPROC_LINE=93, PREPROC_FILE=94, LiteralString=95, LiteralInteger=96, 
		LiteralFloat=97, LiteralBoolean=98;
	public const int
		RULE_computationalStart = 0, RULE_typeDeclaration = 1, RULE_globalDeclaration = 2, 
		RULE_globalInheritance = 3, RULE_enumDeclaration = 4, RULE_enumBody = 5, 
		RULE_enumMember = 6, RULE_classDeclaration = 7, RULE_classBody = 8, RULE_funcOrVar = 9, 
		RULE_funcVarOrDeconstructor = 10, RULE_variableDeclaration = 11, RULE_variableDeclarator = 12, 
		RULE_undefinedVariableDeclarator = 13, RULE_definedVariableDeclarator = 14, 
		RULE_functionDeclaration = 15, RULE_deconstructorDeclaration = 16, RULE_functionDeclarationParameters = 17, 
		RULE_functionDeclarationDefinedParameter = 18, RULE_functionDeclarationUndefinedParameter = 19, 
		RULE_functionBody = 20, RULE_encapsulatedFunctionBody = 21, RULE_functionCall = 22, 
		RULE_functionCallParameters = 23, RULE_functionCallParameter = 24, RULE_attribute = 25, 
		RULE_statement = 26, RULE_primaryStatement = 27, RULE_foreachStatement = 28, 
		RULE_foreachControl = 29, RULE_forStatement = 30, RULE_forControl = 31, 
		RULE_ifStatement = 32, RULE_elseStatement = 33, RULE_objectCreation = 34, 
		RULE_whileStatement = 35, RULE_threadStatement = 36, RULE_gotoStatement = 37, 
		RULE_deleteStatement = 38, RULE_lambdaStatement = 39, RULE_breakStatement = 40, 
		RULE_continueStatement = 41, RULE_returnStatement = 42, RULE_switchStatement = 43, 
		RULE_switchLabel = 44, RULE_defaultSwitchLabel = 45, RULE_expression = 46, 
		RULE_primaryExpression = 47, RULE_negatedExpression = 48, RULE_parenthesisedExpression = 49, 
		RULE_arrayIndex = 50, RULE_literalString = 51, RULE_literalBoolean = 52, 
		RULE_literalNull = 53, RULE_literalArray = 54, RULE_literalNumeric = 55, 
		RULE_literalFloat = 56, RULE_literalInteger = 57, RULE_identifier = 58, 
		RULE_genericTypeDeclarationList = 59, RULE_genericTypeDeclaration = 60, 
		RULE_genericTypedReference = 61, RULE_typeReference = 62, RULE_typeModifier = 63, 
		RULE_sharedFuncOrVarModifiers = 64, RULE_variableModifier = 65, RULE_functionModifier = 66;
	public static readonly string[] ruleNames = {
		"computationalStart", "typeDeclaration", "globalDeclaration", "globalInheritance", 
		"enumDeclaration", "enumBody", "enumMember", "classDeclaration", "classBody", 
		"funcOrVar", "funcVarOrDeconstructor", "variableDeclaration", "variableDeclarator", 
		"undefinedVariableDeclarator", "definedVariableDeclarator", "functionDeclaration", 
		"deconstructorDeclaration", "functionDeclarationParameters", "functionDeclarationDefinedParameter", 
		"functionDeclarationUndefinedParameter", "functionBody", "encapsulatedFunctionBody", 
		"functionCall", "functionCallParameters", "functionCallParameter", "attribute", 
		"statement", "primaryStatement", "foreachStatement", "foreachControl", 
		"forStatement", "forControl", "ifStatement", "elseStatement", "objectCreation", 
		"whileStatement", "threadStatement", "gotoStatement", "deleteStatement", 
		"lambdaStatement", "breakStatement", "continueStatement", "returnStatement", 
		"switchStatement", "switchLabel", "defaultSwitchLabel", "expression", 
		"primaryExpression", "negatedExpression", "parenthesisedExpression", "arrayIndex", 
		"literalString", "literalBoolean", "literalNull", "literalArray", "literalNumeric", 
		"literalFloat", "literalInteger", "identifier", "genericTypeDeclarationList", 
		"genericTypeDeclaration", "genericTypedReference", "typeReference", "typeModifier", 
		"sharedFuncOrVarModifiers", "variableModifier", "functionModifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'class'", "'enum'", "'switch'", "'extends'", 
		"'const'", "'break'", "'case'", "'else'", "'for'", "'contine'", "'foreach'", 
		"'if'", "'new'", "'return'", "'this'", "'thread'", "'void'", "'while'", 
		"'autoptr'", "'auto'", "'ref'", "'null'", "'notnull'", "'native'", "'volatile'", 
		"'proto'", "'static'", "'owned'", "'reference'", "'out'", "'protected'", 
		"'event'", "'typedef'", "'modded'", "'override'", "'sealed'", "'inout'", 
		"'super'", "'pointer'", "'goto'", "'private'", "'external'", "'delete'", 
		"'local'", "'default'", "'++'", "'--'", "'<<='", "'>>='", "'-='", "'+='", 
		"'*='", "'/='", "'|='", "'^='", "'<='", "'>='", "'&='", "'!='", "'=='", 
		"'||'", "'&&'", "'|'", "'^'", "'&'", "'~'", "'>'", "'<'", "'='", "'-'", 
		"'+'", "'*'", "'/'", "'('", "')'", "'{'", "'}'", "','", "':'", "';'", 
		"'['", "']'", "'.'", "'!'", "'\"'", "'''", "'%'", null, "'__LINE__'", 
		"'__FILE__'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_LINE_COMMENT", "EMPTY_DELIMITED_COMMENT", "DELIMITED_COMMENT", 
		"WHITESPACES", "CLASS", "ENUM", "SWITCH", "EXTENDS", "CONST", "BREAK", 
		"CASE", "ELSE", "FOR", "CONTINUE", "FOREACH", "IF", "NEW", "RETURN", "THIS", 
		"THREAD", "VOID", "WHILE", "AUTOPTR", "AUTO", "REF", "NULL", "NOTNULL", 
		"NATIVE", "VOLATILE", "PROTO", "STATIC", "OWNED", "REFERENCE", "OUT", 
		"PROTECTED", "EVENT", "TYPEDEF", "MODDED", "OVERRIDE", "SEALED", "INOUT", 
		"SUPER", "POINTER", "GOTO", "PRIVATE", "EXTERNAL", "DELETE", "LOCAL", 
		"DEFAULT", "Increment", "Decrement", "LShift_Assign", "RShift_Assign", 
		"Subtract_Assign", "Add_Assign", "Multiply_Assign", "Divide_Assign", "Or_Assign", 
		"Xor_Assign", "LessEqual", "GreaterEqual", "And_Assign", "Inequal", "Equal", 
		"LogicalOr", "LogicalAnd", "BitwiseOr", "BitwiseXor", "BitwiseAnd", "BitwiseNot", 
		"Greater", "Less", "Assign", "Subtract", "Add", "Multiply", "Divide", 
		"LParenthesis", "RParenthesis", "LCurly", "RCurly", "Comma", "Colon", 
		"Semicolon", "LSBracket", "RSBracket", "Dot", "Bang", "DoubleQuote", "SingleQuote", 
		"Modulo", "IDENTIFIER", "PREPROC_LINE", "PREPROC_FILE", "LiteralString", 
		"LiteralInteger", "LiteralFloat", "LiteralBoolean"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EnScriptParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static EnScriptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EnScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EnScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ComputationalStartContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(EnScriptParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext[] globalDeclaration() {
			return GetRuleContexts<GlobalDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext globalDeclaration(int i) {
			return GetRuleContext<GlobalDeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncOrVarContext[] funcOrVar() {
			return GetRuleContexts<FuncOrVarContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncOrVarContext funcOrVar(int i) {
			return GetRuleContext<FuncOrVarContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public ComputationalStartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_computationalStart; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.EnterComputationalStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.ExitComputationalStart(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEnScriptParserVisitor<TResult> typedVisitor = visitor as IEnScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComputationalStart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComputationalStartContext computationalStart() {
		ComputationalStartContext _localctx = new ComputationalStartContext(Context, State);
		EnterRule(_localctx, 0, RULE_computationalStart);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CLASS) | (1L << ENUM) | (1L << CONST) | (1L << VOID) | (1L << AUTOPTR) | (1L << REF) | (1L << NOTNULL) | (1L << NATIVE) | (1L << VOLATILE) | (1L << PROTO) | (1L << STATIC) | (1L << OWNED) | (1L << REFERENCE) | (1L << OUT) | (1L << PROTECTED) | (1L << EVENT) | (1L << TYPEDEF) | (1L << MODDED) | (1L << OVERRIDE) | (1L << SEALED) | (1L << INOUT) | (1L << PRIVATE) | (1L << EXTERNAL) | (1L << LOCAL))) != 0) || _la==LSBracket || _la==IDENTIFIER) {
				{
				State = 137;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 134;
					globalDeclaration();
					}
					break;
				case 2:
					{
					State = 135;
					funcOrVar();
					}
					break;
				case 3:
					{
					State = 136;
					typeDeclaration();
					}
					break;
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 142;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPEDEF() { return GetToken(EnScriptParser.TYPEDEF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeReferenceContext typeReference() {
			return GetRuleContext<TypeReferenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(EnScriptParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ArrayIndexContext arrayIndex() {
			return GetRuleContext<ArrayIndexContext>(0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEnScriptParserVisitor<TResult> typedVisitor = visitor as IEnScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_typeDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144;
			Match(TYPEDEF);
			State = 145;
			typeReference();
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LSBracket) {
				{
				State = 146;
				arrayIndex();
				}
			}

			State = 149;
			identifier();
			State = 150;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ClassDeclarationContext classDeclaration() {
			return GetRuleContext<ClassDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumDeclarationContext enumDeclaration() {
			return GetRuleContext<EnumDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute() {
			return GetRuleContext<AttributeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeModifierContext[] typeModifier() {
			return GetRuleContexts<TypeModifierContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeModifierContext typeModifier(int i) {
			return GetRuleContext<TypeModifierContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(EnScriptParser.Semicolon, 0); }
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.EnterGlobalDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.ExitGlobalDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEnScriptParserVisitor<TResult> typedVisitor = visitor as IEnScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalDeclarationContext globalDeclaration() {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_globalDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LSBracket) {
				{
				State = 152;
				attribute();
				}
			}

			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==MODDED || _la==SEALED) {
				{
				{
				State = 155;
				typeModifier();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 163;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CLASS:
				{
				State = 161;
				classDeclaration();
				}
				break;
			case ENUM:
				{
				State = 162;
				enumDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 166;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Semicolon) {
				{
				State = 165;
				Match(Semicolon);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalInheritanceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeReferenceContext[] typeReference() {
			return GetRuleContexts<TypeReferenceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeReferenceContext typeReference(int i) {
			return GetRuleContext<TypeReferenceContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Colon() { return GetToken(EnScriptParser.Colon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EXTENDS() { return GetToken(EnScriptParser.EXTENDS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(EnScriptParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(EnScriptParser.Comma, i);
		}
		public GlobalInheritanceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalInheritance; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.EnterGlobalInheritance(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.ExitGlobalInheritance(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEnScriptParserVisitor<TResult> typedVisitor = visitor as IEnScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalInheritance(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalInheritanceContext globalInheritance() {
		GlobalInheritanceContext _localctx = new GlobalInheritanceContext(Context, State);
		EnterRule(_localctx, 6, RULE_globalInheritance);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 168;
			_la = TokenStream.LA(1);
			if ( !(_la==EXTENDS || _la==Colon) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 169;
			typeReference();
			State = 174;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 170;
				Match(Comma);
				State = 171;
				typeReference();
				}
				}
				State = 176;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENUM() { return GetToken(EnScriptParser.ENUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumBodyContext enumBody() {
			return GetRuleContext<EnumBodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalInheritanceContext globalInheritance() {
			return GetRuleContext<GlobalInheritanceContext>(0);
		}
		public EnumDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.EnterEnumDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEnScriptParserListener typedListener = listener as IEnScriptParserListener;
			if (typedListener != null) typedListener.ExitEnumDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEnScriptParserVisitor<TResult> typedVisitor = visitor as IEnScriptParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumDeclarationContext enumDeclaration() {
		EnumDeclarationContext _localctx = new EnumDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_enumDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			Match(ENUM);
			State = 178;
			identifier();
			State = 180;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EXTENDS || _la==Colon) {
				{
				State = 179;
				globalInheritance();
				}
			}

			State = 182;
			enumBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
